<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Women_Sefety</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_one_time_password_on_this_phone_number">We will send you a one time password on this Phone Number.</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="_91">+91 -</string>
    <string name="_940xxxx238">940XXXX238</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="didn_t_receive_the_otp">Didn\'t Receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="law">Law</string>
    <string name="location">Location</string>
    <string name="start">START</string>
    <string name="search_near_by">Search Near by</string>
    <string name="search">Search</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="theme">Theme</string>
    <string name="Setting">Setting</string>
    <string name="aboutus">AboutUs</string>
    <string name="logout">Logout</string>
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="card_details">1.\t\tCarry a pepper spray with you, always and keep it handy. Don\'t tuck it too low in your bag.\n\n2.\t\tHold your bag as tightly as you can when you are taking public transport. You can use it to hit your predator.\n\n3.\t\tWhen you are walking on a road, keep your mobile phone handy but avoid using it. Being on the phone makes you less alert.\n\n4.\t\tWhen you are travelling in hired vehicle alone, make sure you share the vehicle number with someone inyour family even if it\'s during the day.\n\n5.\t\t Similarly, if you have booked a cab, always share your coordinates with someone.\n\n6.\t\t When in office, avoid going to isolated areas with no CCTV cameras.\n\n7.\t\tIf you have parked your car, always look underneath, especially at night or at a less-crowded area. \n\n8.\t\tIf you feel someone is stalking you, try to find a crowded place and call someone for help.</string>
    <string name="cardTitle">General Safety Tips</string>
    <string name="cardTitle2">Medical Emergency Tips</string>
    <string name="cradTitle3">Other Safety Tips</string>
    <string name="cardDetails2">1.\tIdentifying the cause and the nature of the problem.\n\n2.\tMaking sure that the airway is unrestricted.\n\n3.\tCall the emergency number immediately.\n\n4.\tLook for the medical kit, Stay calm.\n\n5.\tProtect yourself and check for any danger.\n\n6.\tKeep a first aid box ready.</string>
    <string name="cardDetails3">1.\t\tIf you have parked your car, always look underneath, especially at night or at a less-crowded area.\n\n2.\tWhenever you are posting anything on social media, make sure you don’t do it in real-time. Because if you do, you’re telling people on your social media about your whereabouts. Delay those posts by say, 20-30 minutes.\n\n3.\t\tAlways pour your own drinks at parties and don’t ever take drinks from complete strangers or even friends. If you’ve left your drink unattended for even a few minutes, leave it and get a fresh drink. It may have been spiked when you weren’t looking.\n\n4.\t\tIf you feel someone is stalking you, try to find a crowded place and call someone for help.</string>
    <string name="title_activity_contatct_list">Contatct_List</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="siren">Siren</string>
    <string name="alert">Alert</string>
    <string name="camera">camera</string>
    <string name="share_nlocation">Share Location</string>
    <string name="speed_n_dial">speed\n dial</string>
    <string name="pre_alert">Pre-Alert</string>
    <string name="where_am_i">Where am i ?</string>
    <string name="self_defence_tips">Self Defence tips</string>
    <string name="speed_dial">Speed Dial</string>
    <string name="blogger">Blogger</string>
    <string name="play_video">Play Video</string>
    <string name="preview">Preview</string>
    <string name="add_contact">Add Contact</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="women_helpline_1091">Women Helpline - 1091</string>
    <string name="women_helpline_181_n_domestic_abuse">Women Helpline - 181\n(Domestic abuse)</string>
    <string name="police_station_100">Police Station- 100</string>
    <string name="ambulance_108">Ambulance - 108</string>
    <string name="fire_station_101">Fire Station - 101</string>
    <string name="blood_bank_1910">Blood Bank - 1910</string>
    <string name="laws_for_women">Laws for women</string>
    <string name="_1_t_tright_to_free_aid_nwhen_a_woman_goes_to_the_police_station_without_being_accompanied_by_a_lawyer_she_should_be_aware_of_the_fact_that_she_has_a_right_to_get_the_legal_aid_and_that_she_should_demand_it_n_n2_tright_to_zero_fir_nas_according_to_the_supreme_court_ruling_a_rape_victim_can_register_her_police_complaint_from_any_police_station_under_the_zero_fir">1.\t\tRight to free aid :\nWhen a woman goes to the police station without being accompanied by a lawyer she should be aware of the fact that she has a right to get the legal aid and that she should demand it.\n\n2.\tRight to Zero FIR :\nAs according to the Supreme Court ruling a rape victim can register her police complaint from any police station under the Zero FIR.</string>
    <string name="click_for_more">Click for more....</string>
    <string name="n3_tright_to_no_arrest_naccording_to_a_supreme_court_ruling_a_woman_cannot_be_arrested_after_sunset_and_before_sunrise_except_in_case_the_woman_has_committed_a_serious_crime_the_police_require_to_get_it_in_writing_from_the_magistrate_explaining_why_the_arrest_is_necessary_during_the_night_n_n4_right_to_privacy_na_woman_who_has_been_raped_has_a_right_to_record_her_statement_in_private_in_front_of_the_magistrate_without_being_overheard_by_anyone_else_or_with_a_lady_constable_or_a_police_officer_in_person_under_section_164_of_the_criminal_procedure_code_the_cops_will_have_to_give_the_privacy_to_the_victim_without_stressing_her_in_front_of_masses_n_n5_right_to_confidentiality_nunder_no_conditions_a_rape_victim_s_identity_of_can_be_revealed_neither_the_police_nor_media_can_make_known_the_name_of_the_victim_in_public_section_228_a_of_the_indian_penal_code_makes_the_disclosure_of_a_victim_s_identity_a_punishable_offence">\n3.\tRight to no arrest :\nAccording to a Supreme Court ruling, a woman cannot be arrested after sunset and before sunrise. Except, in case the woman has committed a serious crime, the police require to get it in writing from the magistrate explaining why the arrest is necessary during the night.\n\n4.Right to privacy :\nA woman who has been raped has a right to record her statement in private in front of the magistrate without being overheard by anyone else or with a lady constable or a police officer in person. Under section 164 of the Criminal Procedure Code, the cops will have to give the privacy to the victim without stressing her in front of masses.\n\n5.Right to confidentiality :\nUnder no conditions a rape victim\'s identity of can be revealed. Neither the police nor media can make known the name of the victim in public. Section 228-A of the Indian Penal Code makes the disclosure of a victim\'s identity a punishable offence.</string>
    <string name="further_info" tools:ignore="MissingTranslation">further info</string>
    <string name="http_ncw_nic_in_important_links_list_of_laws_related_to_women">http://ncw.nic.in/important-links/List-of-Laws-Related-to-Women</string>
    <string name="police_station">Police Station</string>
    <string name="hospital">Hospital</string>
    <string name="search_more">Search More</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="user_guide">UserGuide</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="internship_project">Internship Project</string>
    <string name="batchelor_of_computer_application_bca">Batchelor of computer application (BCA)</string>
    <string name="application_developers">Application Developers</string>
    <string name="_1_t_tsoni_dhairya_n2_t_tvahora_aman">1\t\tSoni Dhairya\n2.\t\tVahora Aman</string>
    <string name="mentors">Mentors</string>
    <string name="_1_nisarg_jani_n2_prof_kinjal_acharya">1. Nisarg jani\n2. Prof. Kinjal acharya</string>
    <string name="_1_add_contact">1.Add Contact</string>
    <string name="press_add_contact_button_and_then_just_click_on_plus_button_to_open_phonebook_then_tap_any_contact_that_you_want_to_add_in_to_your_alert_contact_list_n_if_you_want_to_remove_contacts_from_alert_contacts_list_just_simply_click_on_bin_icon">- Press \'Add Contact\' Button and then just click on plus button to open phonebook. Then tap any contact that you want to add in to your alert contact List.\n- if you want to Remove contacts from alert contacts list just simply click on bin icon.</string>
    <string name="_2_tpolice_siren">2.\tPolice Siren</string>
    <string name="press_the_siren_button_to_rings_the_police_siren_n_siren_sounds_at_maximum_volume_even_if_your_phone_is_in_silent_mode">- Press the \'Siren\' Button to Rings the Police Siren.\n- Siren sounds at maximum volume even if your phone is in silent mode.</string>
    <string name="_3_talert">3.\tAlert</string>
    <string name="press_the_alert_button_to_send_emergency_message_and_your_live_location_to_all_the_contacts_in_your_alert_contact_list">- Press the \'Alert\' Button to send emergency Message and your live location to all the contacts in your Alert Contact List.</string>
    <string name="_4_tcamera">4.\tCamera</string>
    <string name="_5_tshare_location">5.\tShare Location</string>
    <string name="press_the_camera_button_to_capture_the_photo_and_you_can_share_it_on_any_social_media_app_which_is_available_in_your_mobile_phone">- Press the Camera Button to capture the photo and you can share it on any social media app which is available in your Mobile Phone.</string>
    <string name="press_the_share_location_button_to_share_live_location_on_any_social_media_app_which_is_available_in_your_mobile_phone_n_you_can_send_your_current_location_with_this_feature">- Press the \'Share Location\' Button to Share live location on any social media app which is available in your Mobile Phone.\n-you can send your current location with this feature.</string>
    <string name="_6_speed_dial">6.Speed Dial</string>
    <string name="press_the_speed_dial_button_to_open_speed_dial_list_then_tap_any_contact_to_make_a_call_it_allows_a_caller_to_contact_local_emergency_services_for_assistance">- Press the \'Speed Dial\' Button to open Speed dial list. Then tap any contact to make a call. it allows a caller to contact local emergency services for assistance.</string>
    <string name="emergency_alert_message_n_will_be_shared_in">Emergency alert message\n will be shared in</string>
    <string name="x">X</string>
    <string name="sec">sec.</string>
    <string name="just_click_the_cancel_button_nto_cancel_this_event">Just click the cancel button\nto cancel this event</string>
    <string name="cancel">Cancel</string>
</resources>