<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".nav_userguide">
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/colorWhite"
        app:navigationIcon="@drawable/backbtn_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/armata"
                android:gravity="center_vertical"
                android:text="@string/user_guide"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/armata"
                android:text="@string/_1_add_contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/addcontact" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/armata"
                android:text="@string/press_add_contact_button_and_then_just_click_on_plus_button_to_open_phonebook_then_tap_any_contact_that_you_want_to_add_in_to_your_alert_contact_list_n_if_you_want_to_remove_contacts_from_alert_contacts_list_just_simply_click_on_bin_icon"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/colorTextPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/armata"
                android:text="@string/_2_tpolice_siren"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/siren" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/armata"
                android:text="@string/press_the_siren_button_to_rings_the_police_siren_n_siren_sounds_at_maximum_volume_even_if_your_phone_is_in_silent_mode"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/colorTextPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/armata"
                android:text="@string/_3_talert"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/alert_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/armata"
               android:text="@string/press_the_alert_button_to_send_emergency_message_and_your_live_location_to_all_the_contacts_in_your_alert_contact_list"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/colorTextPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/armata"
                android:text="@string/_4_tcamera"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/cam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/armata"
                android:text="@string/press_the_camera_button_to_capture_the_photo_and_you_can_share_it_on_any_social_media_app_which_is_available_in_your_mobile_phone"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/colorTextPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/armata"
                android:text="@string/_5_tshare_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/share_loc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/armata"
                android:text="@string/press_the_share_location_button_to_share_live_location_on_any_social_media_app_which_is_available_in_your_mobile_phone_n_you_can_send_your_current_location_with_this_feature"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/colorTextPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/armata"
                android:text="@string/_6_speed_dial"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/eme_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/armata"
                android:text="@string/press_the_speed_dial_button_to_open_speed_dial_list_then_tap_any_contact_to_make_a_call_it_allows_a_caller_to_contact_local_emergency_services_for_assistance"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>