<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_closeBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/down_arrow"
        app:tint="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_userGuide"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#FFE0B2"
            android:drawableLeft="@drawable/user_giude"
            android:fontFamily="@font/armata"
            android:text="@string/user_guide"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rippleColor="@color/rippleColor" />

        <Button
            android:id="@+id/btn_aboutus"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#DCEDC8"
            android:drawableRight="@drawable/aboutus"
            android:fontFamily="@font/armata"
            android:text="@string/about_us"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rippleColor="@color/rippleColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#C5CAE9"
            android:drawableLeft="@drawable/settings"
            android:fontFamily="@font/armata"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rippleColor="@color/rippleColor" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#E0FFFC"
            android:drawableRight="@drawable/logout"
            android:fontFamily="@font/armata"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rippleColor="@color/rippleColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_rate"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#F0F4C3"
            android:drawableLeft="@drawable/rateus"
            android:fontFamily="@font/armata"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rippleColor="@color/rippleColor" />

        <Button
            android:id="@+id/btn_shareApplication"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#FFAB91"
            android:drawableRight="@drawable/shareapplication"
            android:fontFamily="@font/armata"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rippleColor="@color/rippleColor" />
    </LinearLayout>

</LinearLayout>
